--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/ChiuMungZitAlexander/card-match-game/issues"
   },
-  "homepage": "https://github.com/ChiuMungZitAlexander/card-match-game#readme"
+  "homepage": "https://github.com/ChiuMungZitAlexander/card-match-game#readme",
+  "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "react": "^16.2.0"
+  }
 }
