basic loaders, scripts and entry js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A card match game based on React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js",
+    "dev:frontend": "webpack-dev-server --devtool eval --content-base ./dist --inline --colors --hot --port 8080"
   },
   "repository": {
     "type": "git",
@@ -22,11 +24,18 @@
   },
   "homepage": "https://github.com/ChiuMungZitAlexander/card-match-game#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.10.0"
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.6",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
-    "react": "^16.2.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
