eslint and style-loader

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:js": "eslint . --color",
+    "lint:css": "stylelint src/client/**/*.scss --colors --fix",
+    "lint": "npm-run-all --sequential lint:js lint:css",
     "build": "webpack --config webpack.config.js",
     "dev:frontend": "webpack-dev-server --devtool eval --content-base ./dist --inline --colors --hot --port 8080"
   },
@@ -29,8 +32,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.13.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.6",
+    "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
